--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,17 +1,50 @@
 name: CD
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
+    tags: ["*"]
   pull_request:
     branches:
       - main
   release:
     types:
       - published
+  workflow_dispatch:
+
+
+permissions:
+  contents: read
+  id-token: write
 
 jobs:
-  dist:
+  # Always build & lint package.
+  build-package:
+    name: Build & verify package
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: hynek/build-and-inspect-python-package@v1
+  # Upload to real PyPI on GitHub Releases.
+  release-pypi:
+    name: Publish released package to pypi.org
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ninebot-ble
+    if: github.repository_owner == 'ownbee' && github.event.action == 'published'
+    runs-on: ubuntu-latest
+    needs: build-package
+
+    steps:
+      - name: Download packages built by build-and-inspect-python-package
+        uses: actions/download-artifact@v3
+        with:
+          name: Packages
+          path: dist
+
+      - name: Upload package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
