--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,7 +35,7 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/p/ninebot-ble
-    if: github.repository_owner == 'ownbee' && github.event.action == 'published'
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: build-package
 
