--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 ]
 urls.homepage = "https://github.com/ownbee/ninebot-ble"
 dependencies = [
+  "miauth==0.9.7",
   "bleak",
   "bleak-retry-connector",
   "bluetooth-sensor-state-data",
